[tracing] Move and rename TRACE_EVENT_API_TASK_EXECUTION_EVENT

The heap profiler specific macros are moved to heap_profiler.h. This CL
also gives a better name to the api. Note that the trace_event.h now
includes heap_profiler.h instead of context_tracker.h and contains the
implementation of TRACE_TASK_EXECUTION because it depends on
base::Location and AllocationContextTracker.

BUG=609882

Review-Url: https://codereview.chromium.org/1950313005
Cr-Commit-Position: refs/heads/master@{#393616}