base/trace_event/common/trace_event_common.h
@@ -929,12 +929,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 // Special trace event macro to trace task execution with the location where it
 // was posted from.
-#define TRACE_TASK_EXECUTION(run_function, task)                        \
-  TRACE_EVENT2("toplevel", run_function, "src_file",                    \
-               (task).posted_from.file_name(), "src_func",              \
-               (task).posted_from.function_name());                     \
-  TRACE_EVENT_API_SCOPED_TASK_EXECUTION_EVENT INTERNAL_TRACE_EVENT_UID( \
-      task_event)((task).posted_from.file_name());
+#define TRACE_TASK_EXECUTION(run_function, task) \
+  INTERNAL_TRACE_TASK_EXECUTION(run_function, task)
 
 // TRACE_EVENT_METADATA* events are information related to other
 // injected events, not events in their own right.
